src/test/deca/syntax/invalid/resultats/test15_decl-synt.res
./src/test/deca/syntax/invalid/test15_decl.deca:16:0: no viable alternative at input '}'
